# DataPilot-V2

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  esbuild.js  package-lock.json  package.json
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/agent/: prompts.py  react_agent.py
backend/app/: config.py  main.py
backend/app/agent/: codegen.py  graph.py  intents.py  llm.py  pipeline.py  prompts.py  qa.py  router.py  state.py  templates.py  tools.py
backend/app/jupyter/: client.py  notebook_manager.py
backend/app/routers/: chat.py  execute.py  kernel.py  upload.py
backend/app/services/: session.py
backend/cli/: __init__.py  config.py  kernel.py  main.py  notebook.py  repl.py  session.py
backend/pipeline/: state.py
backend/reference/agent_legacy/: prompts.py
backend/reference/v1_tools/: eda.py
backend/report/: generator.py
backend/routers/: __init__.py  dataset.py  project.py
backend/tools/: __init__.py  base.py  evaluation.py  explainability.py  feature_engineering.py  model_training.py  preprocessing.py  problem_detection.py
extension/: esbuild.js  package-lock.json  package.json
extension/src/: config.ts  extension.ts
src/: extension.ts
src/sidecar/: sidecarManager.ts
src/webview/: webviewProvider.ts
v1/backend/: config.py  requirements.txt
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/components/: ChatSidebar.tsx  JupyterFrame.tsx
web/lib/: db.ts
webview-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+27 files in other folders)
